@@ -1109,31 +1109,25 @@ static void Handle_events
 			show_items_clicked = false;
 		}
 
-		// Is lerping (smooth scrolling) enabled
-		if (gwin->is_lerping_enabled())
+		// Lerping stuff...
+		// Always repaint,
+		Actor *act = gwin->get_camera_actor();
+		int mswait = (act->get_frame_time()*gwin->is_lerping_enabled())/100;
+		if (mswait <= 0) mswait = (gwin->get_std_delay()*gwin->is_lerping_enabled())/100;
+
+		// Force a reset if position changed
+		if (last_x != gwin->get_scrolltx() || last_y != gwin->get_scrollty())
 		{
-			// Lerping stuff...
-			// Always repaint,
-			Actor *act = gwin->get_camera_actor();
-			int mswait = act->get_frame_time();
-			if (mswait <= 0) mswait = gwin->get_std_delay();
+			//printf ("%i: %i -> %i, %i -> %i\n", ticks, last_x, gwin->get_scrolltx(), last_y, gwin->get_scrollty());
+			gwin->lerp_reset();
+			last_repaint = ticks;
+		}
+		last_x = gwin->get_scrolltx();
+		last_y = gwin->get_scrollty();
 
-			// Force a reset if position changed
-			if (last_x != gwin->get_scrolltx() || last_y != gwin->get_scrollty())
-			{
-				//printf ("%i: %i -> %i, %i -> %i\n", ticks, last_x, gwin->get_scrolltx(), last_y, gwin->get_scrollty());
-				gwin->lerp_reset();
-				last_repaint = ticks;
-			}
-			last_x = gwin->get_scrolltx();
-			last_y = gwin->get_scrollty();
-
-			while (ticks > last_repaint+mswait)
-			{
-				gwin->lerp_reset();
-				last_repaint += mswait;
-			}
-
+		// Is lerping (smooth scrolling) enabled
+		if (mswait && ticks < (last_repaint+mswait*2))
+		{
 			gwin->paint_lerped(((ticks-last_repaint)*0x10000)/mswait);
 		}
 		else // No lerping
@@ -1150,7 +1144,7 @@ static void Handle_events
 					gwin->paint();
 				else
 					gwin->paint_dirty();
-				while (ticks > last_repaint+50)last_repaint += 50;
+				//while (ticks > last_repaint+50)last_repaint += 50;
 				}
 		}
 		Mouse::mouse->show();	// Re-display mouse.
